--- a/PrototypeSln/Prototype/Prototype/Prototype.csproj
+++ b/PrototypeSln/Prototype/Prototype/Prototype.csproj
@@ -20,4 +20,10 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="SignUp.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
